# indiaruns-ai-workflow

graphify-out/: .graphify_detect.json  .graphify_python  .graphify_root
redrob-ranker-ai/: .gitignore  Dockerfile  FINAL_HACKATHON_REPORT.md  README.md  pyproject.toml  requirements.txt  run.py  streamlit_app.py  submission_metadata.yaml
redrob-ranker-ai/app/: __init__.py  demo.py
redrob-ranker-ai/data/artifacts/: tfidf_pipeline.joblib
redrob-ranker-ai/data/raw/: job_description.txt
redrob-ranker-ai/outputs/: submission.csv  test_submission.csv
redrob-ranker-ai/scripts/: precompute.py
redrob-ranker-ai/src/: __init__.py  behavioral_signals.py  config.py  embedder.py  feature_engineering.py  features.py  honeypot.py  jd_understanding.py  load_data.py  parser.py  ranker.py  reasoning.py  scorer.py  scoring.py  signals.py  text_features.py  trap_detection.py  validate_submission.py
redrob-ranker-ai/tests/: __init__.py  test_behavioral_signals.py  test_feature_engineering.py  test_features.py  test_honeypot.py  test_jd_understanding.py  test_load_data.py  test_parser.py  test_ranker.py  test_reasoning.py  test_scorer.py  test_scoring.py  test_signals.py  test_text_features.py  test_trap_detection.py  test_validate_submission.py
